# first_poetry

./: .gitignore  pyproject.toml
first_poetry/scripts/: say_hello.py
